--- a/src/lib/dune
+++ b/src/lib/dune
@@ -1,4 +1,13 @@
 (library
  (name shelter)
  (public_name shelter)
- (libraries cmdliner irmin-fs.unix eio.unix eio linenoise void repr morbig))
+ (libraries
+  cmdliner
+  irmin-fs.unix
+  irmin-git.unix
+  eio.unix
+  eio
+  linenoise
+  void
+  repr
+  morbig))
