--- a/shelter.opam
+++ b/shelter.opam
@@ -16,7 +16,9 @@ depends: [
   "zfs"
   "cid"
   "ppx_repr"
-  "irmin-fs"
+  "irmin-git"
+  "morbig"
+  "ppx_blob"
   "cmdliner"
   "odoc" {with-doc}
 ]
@@ -39,5 +41,7 @@ pin-depends:[
   [ "zfs.dev"      "git+https://github.com/patricoferris/ocaml-zfs" ]
   [ "void.dev"     "git+https://github.com/quantifyearth/void" ]
   [ "irmin.dev"    "git+https://github.com/mirage/irmin#eio" ]
-  [ "irmin-fs.dev" "git+https://github.com/mirage/irmin#eio" ]
+  [ "ppx_irmin.dev"    "git+https://github.com/mirage/irmin#eio" ]
+  [ "irmin-git.dev" "git+https://github.com/mirage/irmin#eio" ]
+  [ "irmin-watcher.dev" "git+https://github.com/patricoferris/irmin-watcher#675125d9e95cd09ef0c18ab1d9d6d69a26856b9f" ]
 ]
