--- a/shelter.opam.template
+++ b/shelter.opam.template
@@ -2,5 +2,7 @@ pin-depends:[
   [ "zfs.dev"      "git+https://github.com/patricoferris/ocaml-zfs" ]
   [ "void.dev"     "git+https://github.com/quantifyearth/void" ]
   [ "irmin.dev"    "git+https://github.com/mirage/irmin#eio" ]
-  [ "irmin-fs.dev" "git+https://github.com/mirage/irmin#eio" ]
+  [ "ppx_irmin.dev"    "git+https://github.com/mirage/irmin#eio" ]
+  [ "irmin-git.dev" "git+https://github.com/mirage/irmin#eio" ]
+  [ "irmin-watcher.dev" "git+https://github.com/patricoferris/irmin-watcher#675125d9e95cd09ef0c18ab1d9d6d69a26856b9f" ]
 ]
